--- a/src/App.css
+++ b/src/App.css
@@ -1,37 +1,44 @@
+/* styles.css */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
 }
+
 body {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0 10px;
   min-height: 100vh;
-  background: #ffc107;
+  background: #419be9;
 }
+
 .container {
   min-width: 700px;
   width: 100%;
   padding: 30px;
-  background: #fff;
+  background: #ffffff;
   border-radius: 7px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.01);
 }
+
 .wrapper {
   border-radius: 5px;
   border: 1px solid #ccc;
 }
+
 .wrapper .text-input {
   display: flex;
   border-bottom: 1px solid #ccc;
 }
+
 .text-input .to-text {
-  border-radius: 0px;
+  border-radius: 0;
   border-left: 1px solid #ccc;
 }
+
 .text-input textarea {
   height: 250px;
   width: 100%;
@@ -43,9 +50,11 @@ body {
   padding: 10px 15px;
   border-radius: 5px;
 }
+
 .text-input textarea::placeholder {
   color: #b7b6b6;
 }
+
 .controls,
 li,
 .icons,
@@ -54,13 +63,16 @@ li,
   align-items: center;
   justify-content: space-between;
 }
+
 .controls {
   list-style: none;
   padding: 12px 15px;
 }
+
 .controls .row .icons {
   width: 38%;
 }
+
 .controls .row .icons i {
   width: 50px;
   color: #adadad;
@@ -69,14 +81,17 @@ li,
   transition: transform 0.2s ease;
   justify-content: center;
 }
+
 .controls .row.from .icons {
   padding-right: 15px;
   border-right: 1px solid #ccc;
 }
+
 .controls .row.to .icons {
   padding-left: 15px;
   border-left: 1px solid #ccc;
 }
+
 .controls .row select {
   color: #333;
   border: none;
@@ -85,34 +100,42 @@ li,
   background: none;
   padding-left: 5px;
 }
+
 .text-input textarea::-webkit-scrollbar {
   width: 4px;
 }
+
 .controls .row select::-webkit-scrollbar {
   width: 8px;
 }
+
 .text-input textarea::-webkit-scrollbar-track,
 .controls .row select::-webkit-scrollbar-track {
   background: #fff;
 }
+
 .text-input textarea::-webkit-scrollbar-thumb {
   background: #ddd;
   border-radius: 8px;
 }
+
 .controls .row select::-webkit-scrollbar-thumb {
   background: #999;
   border-radius: 8px;
   border-right: 2px solid #ffffff;
 }
+
 .controls .exchange {
   color: #adadad;
   cursor: pointer;
   font-size: 16px;
   transition: transform 0.2s ease;
 }
+
 .controls i:active {
   transform: scale(0.9);
 }
+
 .container button {
   width: 100%;
   padding: 14px;
@@ -123,5 +146,33 @@ li,
   margin-top: 20px;
   font-size: 17px;
   border-radius: 5px;
-  background: #ffc107;
+  background: #125086;
+}
+
+.image-input-label {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #125086;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+#copy-text-button {
+  display: inline-block;
+  margin-top: 10px;
+  padding: 10px 20px;
+  background-color: #125086;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  height:40px;
+  width:140px;
+  font-size: 16px;
+}
+
+#copy-text-button:hover {
+  background-color: #125086;
 }
